--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '5.3.api11'
+version = '5.3.API11'
 group = 'com.obscuria.aquamirae'
 archivesBaseName = 'aquamirae'
 
