--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="Obscuria Lithium (c) 2023, All Rights Reserved."
 
 [[mods]]
 modId="aquamirae"
-version="5.2.api10"
+version="5.2.API10"
 displayName="Aquamirae"
 credits="Krossy, The Exiled Fellow and everyone who supports us on Patreon!"
 displayURL="https://www.curseforge.com/members/obscuriaofficial/projects"
