--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '5.2.api10'
+version = '5.2.API10'
 group = 'com.obscuria.aquamirae'
 archivesBaseName = 'aquamirae'
 
