--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="Obscuria Lithium (c) 2023, All Rights Reserved."
 
 [[mods]]
 modId="aquamirae"
-version="5.3.API11"
+version="5.4.API12"
 displayName="Aquamirae"
 credits="Krossy and everyone who supports us on Patreon!"
 updateJSONURL="https://raw.githubusercontent.com/ObscuriaLithium/Home/main/aquamirae/versions.json"
@@ -29,7 +29,7 @@ description="   Ship graveyard with terrible deep sea creatures."
 [[dependencies.aquamirae]]
     modId="obscure_api"
     mandatory=true
-    versionRange="[11,]"
+    versionRange="[12,)"
     ordering="NONE"
     side="BOTH"
 
