--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mod_version=5.5.API12
+minecraft_version=1.19.2
+forge_version=43.2.0
