--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mod_version=5.6.API14
+minecraft_version=1.18.2
+forge_version=40.2.0
