--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,19 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+minecraft_version=1.19.4
+minecraft_version_range=[1.19.4,1.20)
+forge_version=45.1.2
+forge_version_range=[45,)
+loader_version_range=[45,)
+mapping_channel=official
+mapping_version=1.19.4
+api_version_range=[15,)
+
+mod_id=aquamirae
+mod_name=Aquamirae
+mod_license=Obscuria Lithium (c) 2023, All Rights Reserved.
 mod_version=6.API15
-minecraft_version=1.19.2
-forge_version=43.2.0
+mod_group_id=com.obscuria
+mod_authors=Obscuria, Pluvia
+mod_description=   Ship graveyard with terrible deep sea creatures.
