--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ minecraft {
 
 mixin {
     add sourceSets.main, "${mod_id}.refmap.json"
+
     config "${mod_id}.mixins.json"
 }
 
@@ -91,7 +92,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     flatDir {
-        dirs 'obscuria'
+        dir 'obscuria'
     }
 }
 
@@ -123,7 +124,7 @@ jar {
         attributes([
                 "Specification-Title": mod_id,
                 "Specification-Vendor": mod_authors,
-                "Specification-Version": "1", // We are version 1 of ourselves
+                "Specification-Version": "1",
                 "Implementation-Title": project.name,
                 "Implementation-Version": project.jar.archiveVersion,
                 "Implementation-Vendor": mod_authors,
