--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation "obscuria:obscure_api:16"
+    modImplementation "obscuria:obscureapi:16"
 }
 
 processResources {
