--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,7 @@ def replaceProperties = [
         mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
         mod_authors: mod_authors, mod_description: mod_description
 ]
+
 processResources {
     inputs.properties replaceProperties
     replaceProperties.put 'project', project
@@ -136,6 +137,10 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+}
+
+tasks.named("jarJar", Jar) {
+    from(rootProject.file("LICENSE.md"))
 }
 
 jar.finalizedBy('reobfJar')
